--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 528,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 529,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 530,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 531,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0   Speed limit (20km/h)\n",
+      "   1   Speed limit (30km/h)\n",
+      "   2   Speed limit (50km/h)\n",
+      "   3   Speed limit (60km/h)\n",
+      "   4   Speed limit (70km/h)\n",
+      "   5   Speed limit (80km/h)\n",
+      "   6   End of speed limit (80km/h)\n",
+      "   7   Speed limit (100km/h)\n",
+      "   8   Speed limit (120km/h)\n",
+      "   9   No passing\n",
+      "  10   No passing for vehicles over 3.5 metric tons\n",
+      "  11   Right-of-way at the next intersection\n",
+      "  12   Priority road\n",
+      "  13   Yield\n",
+      "  14   Stop\n",
+      "  15   No vehicles\n",
+      "  16   Vehicles over 3.5 metric tons prohibited\n",
+      "  17   No entry\n",
+      "  18   General caution\n",
+      "  19   Dangerous curve to the left\n",
+      "  20   Dangerous curve to the right\n",
+      "  21   Double curve\n",
+      "  22   Bumpy road\n",
+      "  23   Slippery road\n",
+      "  24   Road narrows on the right\n",
+      "  25   Road work\n",
+      "  26   Traffic signals\n",
+      "  27   Pedestrians\n",
+      "  28   Children crossing\n",
+      "  29   Bicycles crossing\n",
+      "  30   Beware of ice/snow\n",
+      "  31   Wild animals crossing\n",
+      "  32   End of all speed and passing limits\n",
+      "  33   Turn right ahead\n",
+      "  34   Turn left ahead\n",
+      "  35   Ahead only\n",
+      "  36   Go straight or right\n",
+      "  37   Go straight or left\n",
+      "  38   Keep right\n",
+      "  39   Keep left\n",
+      "  40   Roundabout mandatory\n",
+      "  41   End of no passing\n",
+      "  42   End of no passing by vehicles over 3.5 metric tons\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print Label vs Signname\n",
+    "label_to_sign = {}\n",
+    "lines = open(\"signnames.csv\").readlines()\n",
+    "for line in lines[1:]:\n",
+    "    (label, sign) = line.strip().split(\",\")\n",
+    "    label_to_sign[label.strip()] = sign.strip()\n",
+    "\n",
+    "for k, v in label_to_sign.items():\n",
+    "    print(f'{k:>4}   {v}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 532,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 533,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 534,
    "metadata": {},
    "outputs": [
     {
@@ -286,15 +353,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 535,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Preprocess the data here. It is required to normalize the data. Other preprocessing steps could include \n",
     "### converting to grayscale, etc.\n",
     "### Feel free to use as many code cells as needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "# Normalize image.\n",
+    "def normalize_img(image):\n",
+    "    return (image - image.mean())/(np.max(image) - np.min(image))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 537,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grayscale image.\n",
+    "def grayscale_img(image):\n",
+    "    return cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 538,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocess image.\n",
+    "def preprocess(image):\n",
+    "    # Normalize image.\n",
+    "    image_norm = normalize_img(image)\n",
+    "\n",
+    "    return image_norm"
    ]
   },
   {
@@ -306,14 +408,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 539,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Define your architecture here.\n",
     "### Feel free to use as many code cells as needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 540,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.contrib.layers import flatten\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# These are the changes done to the LeNET architecture given in the Tutorials\n",
+    "N_CLASSES = n_classes\n",
+    "N_SHAPE = 1\n",
+    "DROPOUT_PROB = 0.90\n",
+    "\n",
+    "def LeNet(x):\n",
+    "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
+    "    mu = 0\n",
+    "    sigma = 0.1\n",
+    "    \n",
+    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, N_SHAPE, 6), mean = mu, stddev = sigma))\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\n",
+    "    # Adding Dropout Layer\n",
+    "    conv1 = tf.nn.dropout(conv1, DROPOUT_PROB)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "\n",
+    "    # Adding Dropout Layer\n",
+    "    conv2 = tf.nn.dropout(conv2, DROPOUT_PROB)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    fc0   = flatten(conv2)\n",
+    "    \n",
+    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc1    = tf.nn.relu(fc1)\n",
+    "\n",
+    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
+    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc2    = tf.nn.relu(fc2)\n",
+    "\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, N_CLASSES), mean = mu, stddev = sigma))\n",
+    "    fc3_b  = tf.Variable(tf.zeros(N_CLASSES))\n",
+    "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "    \n",
+    "    return logits"
    ]
   },
   {
@@ -333,10 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 541,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Train your model here.\n",
@@ -344,6 +516,210 @@
     "### Once a final model architecture is selected, \n",
     "### the accuracy on the test set should be calculated and reported as well.\n",
     "### Feel free to use as many code cells as needed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 542,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocess the images\n",
+    "X_train_gry = np.sum(X_train/3, axis=3, keepdims=True)\n",
+    "X_valid_gry = np.sum(X_valid/3, axis=3, keepdims=True)\n",
+    "X_test_gry = np.sum(X_test/3, axis=3, keepdims=True)\n",
+    "X_train = np.array([preprocess(image) for image in X_train_gry]).reshape(-1, 32, 32, N_SHAPE)\n",
+    "X_valid = np.array([preprocess(image) for image in X_valid_gry]).reshape(-1, 32, 32, N_SHAPE)\n",
+    "X_test  = np.array([preprocess(image) for image in X_test_gry]).reshape(-1, 32, 32, N_SHAPE)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 543,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num examples =  34799\n",
+      "EPOCHS =  30\n",
+      "Training...\n",
+      "EPOCH 1 ...\n",
+      "Validation Accuracy = 0.778\n",
+      "\n",
+      "EPOCH 2 ...\n",
+      "Validation Accuracy = 0.830\n",
+      "\n",
+      "EPOCH 3 ...\n",
+      "Validation Accuracy = 0.881\n",
+      "\n",
+      "EPOCH 4 ...\n",
+      "Validation Accuracy = 0.890\n",
+      "\n",
+      "EPOCH 5 ...\n",
+      "Validation Accuracy = 0.893\n",
+      "\n",
+      "EPOCH 6 ...\n",
+      "Validation Accuracy = 0.906\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Validation Accuracy = 0.897\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Validation Accuracy = 0.903\n",
+      "\n",
+      "EPOCH 9 ...\n",
+      "Validation Accuracy = 0.910\n",
+      "\n",
+      "EPOCH 10 ...\n",
+      "Validation Accuracy = 0.916\n",
+      "\n",
+      "EPOCH 11 ...\n",
+      "Validation Accuracy = 0.922\n",
+      "\n",
+      "EPOCH 12 ...\n",
+      "Validation Accuracy = 0.922\n",
+      "\n",
+      "EPOCH 13 ...\n",
+      "Validation Accuracy = 0.914\n",
+      "\n",
+      "EPOCH 14 ...\n",
+      "Validation Accuracy = 0.914\n",
+      "\n",
+      "EPOCH 15 ...\n",
+      "Validation Accuracy = 0.928\n",
+      "\n",
+      "EPOCH 16 ...\n",
+      "Validation Accuracy = 0.923\n",
+      "\n",
+      "EPOCH 17 ...\n",
+      "Validation Accuracy = 0.920\n",
+      "\n",
+      "EPOCH 18 ...\n",
+      "Validation Accuracy = 0.932\n",
+      "\n",
+      "EPOCH 19 ...\n",
+      "Validation Accuracy = 0.920\n",
+      "\n",
+      "EPOCH 20 ...\n",
+      "Validation Accuracy = 0.912\n",
+      "\n",
+      "EPOCH 21 ...\n",
+      "Validation Accuracy = 0.925\n",
+      "\n",
+      "EPOCH 22 ...\n",
+      "Validation Accuracy = 0.917\n",
+      "\n",
+      "EPOCH 23 ...\n",
+      "Validation Accuracy = 0.929\n",
+      "\n",
+      "EPOCH 24 ...\n",
+      "Validation Accuracy = 0.927\n",
+      "\n",
+      "EPOCH 25 ...\n",
+      "Validation Accuracy = 0.935\n",
+      "\n",
+      "EPOCH 26 ...\n",
+      "Validation Accuracy = 0.932\n",
+      "\n",
+      "EPOCH 27 ...\n",
+      "Validation Accuracy = 0.936\n",
+      "\n",
+      "EPOCH 28 ...\n",
+      "Validation Accuracy = 0.927\n",
+      "\n",
+      "EPOCH 29 ...\n",
+      "Validation Accuracy = 0.931\n",
+      "\n",
+      "EPOCH 30 ...\n",
+      "Validation Accuracy = 0.929\n",
+      "\n",
+      "Model saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.utils import shuffle\n",
+    " \n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, N_SHAPE))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "one_hot_y = tf.one_hot(y, N_CLASSES)\n",
+    "\n",
+    "rate = 0.001\n",
+    "EPOCHS = 30\n",
+    "BATCH_SIZE = 128\n",
+    "\n",
+    "logits = LeNet(x)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "training_operation = optimizer.minimize(loss_operation)\n",
+    "\n",
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
+    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "def evaluate(X_data, y_data):\n",
+    "    num_examples = len(X_data)\n",
+    "    total_accuracy = 0\n",
+    "    sess = tf.get_default_session()\n",
+    "    for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "        total_accuracy += (accuracy * len(batch_x))\n",
+    "    return total_accuracy / num_examples\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    num_examples = len(X_train)\n",
+    "\n",
+    "    print(\"num examples = \", num_examples)\n",
+    "    print(\"EPOCHS = \", EPOCHS)\n",
+    "    print(\"Training...\")\n",
+    "    for i in range(EPOCHS):\n",
+    "        X_train, y_train = shuffle(X_train, y_train)\n",
+    "        for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "            end = offset + BATCH_SIZE\n",
+    "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
+    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y })\n",
+    "\n",
+    "        validation_accuracy = evaluate(X_valid, y_valid)\n",
+    "        print(\"EPOCH {} ...\".format(i+1))\n",
+    "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "        print()\n",
+    "\n",
+    "    saver.save(sess, './lenet')\n",
+    "    print(\"Model saved\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Testing on the Test Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 544,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./lenet\n",
+      "Test Accuracy = 0.920\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
+    "\n",
+    "    test_accuracy = evaluate(X_test, y_test)\n",
+    "    print(\"Test Accuracy = {:.3f}\".format(test_accuracy))\n"
    ]
   },
   {
@@ -369,9 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Load the images and plot them here.\n",
@@ -387,10 +761,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Run the predictions here and use the model to output the prediction for each image.\n",
@@ -407,10 +779,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Calculate the accuracy for these 5 new images. \n",
@@ -469,10 +839,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Print out the top five softmax probabilities for the predictions on the German traffic sign images found on the web. \n",
@@ -523,9 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Visualize your network's feature maps here.\n",
